--- a/stylesheets/about.css
+++ b/stylesheets/about.css
@@ -4,7 +4,7 @@
 }
 .main h1 {
     font-family: 'NotoSansCJKjp', sans-serif;
-    letter-spacing: 0.8rem;
+    letter-spacing: 0.5rem;
     padding-bottom: 2rem;
 }
 .main .thelink {
@@ -52,14 +52,14 @@
     background-color: rgba(255, 255, 255, 0.1);
 }
 .question h2 {
-    font-size: 20px;
+    font-size: 0.5rem;
     transition: .5s ease;
 }
 .question h2 div {
     padding: 20px;
 }
 .question .text {
-    font-size: 16px;
+    font-size: 0.4rem;
 }
 .question .text .card-body {
     padding: 0.5rem;
